# fastapi-rbac

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: checks.yaml  pypi-minor-deployment.yaml
examples/: basic_app.py
fastapi_rbac/: __init__.py  context.py  core.py  dependencies.py  errors.py  exceptions.py  permissions.py  router.py
fastapi_rbac/ui/: __init__.py  routes.py  schema.py
fastapi_rbac/ui/static/: index.html
tests/: conftest.py  test_context.py  test_context_di.py  test_core.py  test_dependencies.py  test_exceptions.py  test_integration.py  test_permissions.py  test_router.py  test_ui.py
