[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-rbac-authz"
version = "0.1.0"
description = "Role-based access control with contextual authorization for FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<4"
authors = [
    { name = "Dmytro Smyk", email = "porovozls@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/parikls/fastapi-rbac"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_rbac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP046"]  # Keep Generic[T] syntax for stable public API

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
